test/errors/err1.qk
include

func main
	println("yo")
end
